r20523 backport: fix notifications title line getting cropped
git-svn-id: https://xpra.org/svn/Xpra/tags/v1.0.x@20570 3bb7dfac-3a0b-4e04-842a-767bc560f471

--- a/src/html5/css/client.css
+++ b/src/html5/css/client.css
@@ -186,6 +186,7 @@ canvas {
 	margin: 1rem;
 	font-weight: 600;
 	font-size: 1.3rem;
+	line-height: 1.3rem;
 }
 .notifications .alert span a {
 	text-decoration: none;
